welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:13: error: Unmatched closing brace '}' ignored here
 }
 ^